--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "dotenv": "^8.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "node": "^12.11.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.12.1",
     "pg-native": "^3.0.0",
     "twilio": "^3.35.1"
